--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -84,7 +84,7 @@ pipeline {
             steps {
                 sshagent(credentials: ['vps-ssh-key']) {
                     sh """
-                        ssh -v -o StrictHostKeyChecking=no dafa@${env.VPS_HOST} '
+                        ssh -v -o StrictHostKeyChecking=no ${env.VPS_HOST} '
                         cd ${env.VPS_DIR}
                         git pull origin main
                         docker-compose up -d --build
@@ -96,30 +96,70 @@ pipeline {
     }
 
     post {
-       always {
-           cleanWs()
-       }
-       success {
-           discordSend (
-               webhookURL: DISCORD_WEBHOOK,
-               title: "Deployment Successful: ${env.JOB_NAME}",
-               description: "Build #${env.BUILD_NUMBER} has completed successfully.",
-               footer: "Jenkins Build",
-               link: env.BUILD_URL,
-               result: currentBuild.currentResult,
-               thumbnail: "https://jenkins.io/images/logos/jenkins/jenkins.png"
-           )
-       }
-       failure {
-           discordSend (
-               webhookURL: DISCORD_WEBHOOK,
-               title: "Deployment Failed: ${env.JOB_NAME}",
-               description: "Build #${env.BUILD_NUMBER} has failed. Please check the logs for more information.",
-               footer: "Jenkins Build",
-               link: env.BUILD_URL,
-               result: currentBuild.currentResult,
-               thumbnail: "https://jenkins.io/images/logos/jenkins/jenkins.png"
-           )
-       }
-   }
+        always {
+            cleanWs()
+        }
+        success {
+            script {
+                def changes = getChanges()
+                def jenkinsVersion = Jenkins.instance.getVersion().toString()
+                def discordNotifierVersion = Jenkins.instance.pluginManager.getPlugin("discord-notifier").getVersion()
+                discordSend (
+                    webhookURL: DISCORD_WEBHOOK,
+                    title: "Deploy Success !",
+                    description: """**Branch**: ${env.GIT_BRANCH}
+                    **Build**: ${env.BUILD_NUMBER}
+                    **Status**: ${currentBuild.currentResult.toLowerCase()}
+                    **Changes**:
+                    ${changes}
+
+                    **Artifacts**:
+
+                    No artifacts saved.
+                    """,
+                    footer: "Jenkins Build, Jenkins **v${jenkinsVersion}**, Discord Notifier **v${discordNotifierVersion}**",
+                    link: env.BUILD_URL,
+                    result: currentBuild.currentResult,
+                    thumbnail: "https://jenkins.io/images/logos/jenkins/jenkins.png"
+                )
+            }
+        }
+        failure {
+            script {
+                def changes = getChanges()
+                def jenkinsVersion = Jenkins.instance.getVersion().toString()
+                discordSend (
+                    webhookURL: DISCORD_WEBHOOK,
+                    title: "Deploy Failed !",
+                    description: """**Branch**: ${env.GIT_BRANCH}
+                    **Build**: ${env.BUILD_NUMBER}
+                    **Status**: ${currentBuild.currentResult.toLowerCase()}
+                    **Changes**:
+                    ${changes}
+
+                    **Artifacts**:
+
+                    No artifacts saved.
+                    Jenkins Build, Jenkins v${jenkinsVersion}, Discord Notifier v${discordNotifierVersion}""",
+                    footer: "Jenkins Build",
+                    link: env.BUILD_URL,
+                    result: currentBuild.currentResult,
+                    thumbnail: "https://jenkins.io/images/logos/jenkins/jenkins.png"
+                )
+            }
+        }
+    }
+
+    def getChanges() {
+        def changeLogSets = currentBuild.changeSets
+        def changes = ""
+        for (int i = 0; i < changeLogSets.size(); i++) {
+            def entries = changeLogSets[i].items
+            for (int j = 0; j < entries.length; j++) {
+                def entry = entries[j]
+                changes += "${entry.commitId.take(7)} ${entry.msg} - ${entry.author}\n"
+            }
+        }
+        return changes ?: "No changes"
+    }
 }
