CI/CD Fix Done : Remove markdown for footer

--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -132,7 +132,7 @@ pipeline {
                     No artifacts saved.
 
                     """,
-                    footer: "**Jenkins Build** Jenkins **v${jenkinsVersion}**, Discord Notifier **v${discordNotifierVersion}**",
+                    footer: "Jenkins **v${jenkinsVersion}**          Discord Notifier **v${discordNotifierVersion}**",
                     link: env.BUILD_URL,
                     result: currentBuild.currentResult,
                     thumbnail: "https://jenkins.io/images/logos/jenkins/jenkins.png"
@@ -158,7 +158,7 @@ pipeline {
                     No artifacts saved.
 
                     """,
-                    footer: "**Jenkins Build** Jenkins v${jenkinsVersion}, Discord Notifier v${discordNotifierVersion}",
+                    footer: "Jenkins **v${jenkinsVersion}**           Discord Notifier **v${discordNotifierVersion}",
                     link: env.BUILD_URL,
                     result: currentBuild.currentResult,
                     thumbnail: "https://jenkins.io/images/logos/jenkins/jenkins.png"
