--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -101,7 +101,7 @@ pipeline {
                         cd ${env.VPS_DIR}
                         git pull origin main
                         cd build/
-                        docker-compose up -d --build
+                        docker compose up -d --build
                         '
                     """
                 }
