--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -29,6 +29,7 @@ pipeline {
         VPS_HOST = credentials('vps-host-credential')
         VPS_DIR = "/var/www/gopatungan/gopatungan-backend"
         DISCORD_WEBHOOK = credentials('discord-webhook')
+        SSH_PASSPHRASE = credentials('passphrase-ssh-github')
     }
     stages {
         stage("Cleanup Workspace") {
@@ -107,10 +108,14 @@ pipeline {
                         ssh-add ~/.ssh/id_rsa
 
                         cd ${env.VPS_DIR}
+
+                        # Memasukkan passphrase sebelum git pull
+                        echo "${SSH_PASSPHRASE}" | ssh-add -
                         git pull origin main
+
                         cd build/
-                        ls -la ../configs/  # Untuk debug, melihat isi direktori configs
-                        if [ -f "../configs/.env" ]; then
+                        ls -la ../../configs/  # Untuk debug, melihat isi direktori configs
+                        if [ -f "../../configs/.env" ]; then
                             echo ".env file exists"
                             docker compose --env-file ../../configs/.env up -d --build
                         else
