--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -101,7 +101,7 @@ pipeline {
                         sh """
                             ssh -o StrictHostKeyChecking=no -p 22 ${env.VPS_HOST} '
 
-                             # Menambahkan GitHub ke known_hosts jika belum ada
+                             # Menambahkan GitHub ke known_hosts jika belum ada ,test commit
                             grep -q github.com ~/.ssh/known_hosts || ssh-keyscan github.com >> ~/.ssh/known_hosts
 
                             # Menjalankan ssh-agent untuk mengelola kunci SSH
