--- a/deployments/Jenkinsfile
+++ b/deployments/Jenkinsfile
@@ -77,7 +77,7 @@ pipeline {
         stage("Quality Gate") {
             steps {
                 timeout(time: 1, unit: 'HOURS') {
-                    waitForQualityGate abortPipeline: true
+                    waitForQualityGate abortPipeline: true, skipQualityGate: true
                 }
             }
         }
